--- a/style.css
+++ b/style.css
@@ -1746,6 +1746,12 @@ https://flickity.metafizzy.co
   margin-top: 100px;
 }
 
+@media (max-width: 767px) {
+  .two-columns .magnifiable ~ .magnifiable {
+    margin-top: 45px;
+  }
+}
+
 @media (max-width: 1361px) {
   .two-columns {
     grid-gap: 60px;
